# sales-dashboard

./: . railwayignore  .gitignore  .vercelignore  00_START_HERE.md  ADVANCED_REVENUE_ANALYSIS.md  API_ARCHITECTURE.md  API_COMPARISON.md  API_CONFIG.md  API_DATE_FILTERING_GUIDE.md  API_REQUEST_EXAMPLES.md  API_TEST_REPORT.md  Avante ERP API_2.0.postman_collection-1.json  Avante ERP API_2.0.postman_collection.json  BEFORE_AFTER_COMPARISON.md  CACHE_FIX_SUMMARY.md  CHANGELOG.md  CHART_FILTERS_FEATURE.md  CHART_FILTERS_QUICK_GUIDE.md  CHART_STYLING_COMPLETE.md  CHART_UPDATES_VISUAL_GUIDE.md  COMPLETE_SOLUTION.md  COST_COMPARISON.md  CROSS_SELLING_ANALYSIS.md  DASH_MIGRATION_GUIDE.md  DATA_FLOW_DIAGRAM.md  DATA_STATUS.md  DATA_TABLE_FEATURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.txt  DESIGN_SYSTEM_REFERENCE.md  DOCUMENTATION_INDEX.md  DUAL_API_SETUP_GUIDE.md  Dockerfile  ENHANCED_METRIC_CARDS.md  FEATURES_SUMMARY.md  FILTER_REFRESH_FIX.md  FINAL_ACTION.md  (+116 more)
assets/: custom.css  fullscreen_charts.js  indian_number_format.js
frontend-nextjs/: FIXES_APPLIED.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/src/components/: AccessManagementModal.tsx  Charts.tsx  (+12 more)
src/: __init__.py
src/api/: __init__.py  avante_client.py  iospl_client.py
src/auth/: __init__.py  database.py
src/components/: __init__.py
src/config/: settings.py
src/utils/: __init__.py  email_service.py  filters.py  formatters.py
(+16 files in other folders)
